--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^4.3.1",
     "styled-media-query": "^2.1.2"
   },
