--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "2048",
+  "name": "The game based on 2048 concept",
   "icons": [
     {
       "src": "favicon.ico",
