--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^5.10.0",
     "styled-components": "^4.3.1",
     "styled-media-query": "^2.1.2"
   },
