manifest PWA lighthouse icons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,13 @@
   "name": "The game based on 2048 concept",
   "icons": [
     {
+      "src": "4096.png",
+      "type": "image/png",
+      "sizes": "192x192 512x512"
+    },
+    {
       "src": "logo.svg",
-      "sizes": "any",
-      "type": "svg"
+      "sizes": "36x36 48x48 72x72 96x96 144x144 192x192"
     }
   ],
   "start_url": ".",
