--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-plugin-cypress": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-easy-swipe": "^0.0.18",
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^3.3.1"
+    "cypress": "^3.3.1",
+    "eslint-plugin-chai-friendly": "^0.4.1"
   }
 }
