--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^3.3.1",
+    "cypress": "^3.3.2",
+    "cypress-dark": "^1.7.13",
+    "cypress-pipe": "^1.4.0",
     "eslint-plugin-chai-friendly": "^0.4.1"
   }
 }
